fixed padding issue on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -499,7 +499,7 @@ i.fa-facebook, i.fa-instagram{
     background: #000;
     color:#fff;
     height: 80%;
-    padding: 110px;
+    padding: 0 110px;
     line-height: 30px;
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
